
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2025 NOV 24a
  * in model/chem
    - added _Ar_Plasma_4s
    

2025 NOV 10a
  * in model/chem/_Ar_Plasma_8s/
    - made modifications to include averaged rates algorithm within the reaction rates
    - also modified the backward rates of the electron-impact reactions (now they are found
      using BOLSIG+)
    - improved the documentation
    

2025 NOV 05a
  * in cycle/share/cycle_share.c
    - in runtime_actions(), added the action WriteInterpolationFile()
  * in tools
    - added warp2fluent.c
  * in src/data.c
    - added function write_data_file_interpolation_zone()
  * in tools/Makefile
    - added code for warp2fluent
    

2025 OCT 29a
  * in model/chem/_Air_Plasma_11s/rodriguez2026.c
    - changed the temperature T to TTv where appropriate to make the model closer to the
      Park model
  * in model/chem/_Air_Plasma_11s/doc/report.tex
    - modified the documentation for the rodriguez2026 model (sqrt(T*Tv) modifications)
    

2025 OCT 28a
  * in model/chem/_Ar_Plasma_8s/rodriguez2025.c
    - fixed a few bugs
  * in cycle/resconv/_MUSCL/resconv.c
    - in write_disc_resconv_template(), changed the default FLUX to FLUX_HLLC_HYBRID


2025 OCT 27c
  * in model/thermo/_generic/thermo.c
    - in _ionizationpot(), removed all excited species because the activation energies listed
      were not the ionization energies of these species
       

2025 OCT 27b
  * in model/thermo/_generic/enthalpy.c
    - fixed bugs in enthalpies of Ar species
    - added species Ar2
  * in model/thermo/_generic/thermo.c
    - added species Ar2 to speciesname
  * in model/thermo/_generic/thermo.hh
    - added species Ar2 to SMAP
  * in model/thermo/_thermo.h
    - added species Ar2